Changes since 0.2.0
1.  Added _nc_inq_libvers() to get the library version.  It appears
    that version 4.6.1 and earlier versions cannot handle nested
    compound attributes.

Changes since 0.1.0

1.  Added support for reading compound types and scalars.
2.  Updated the documentation
3.  Added get_slices method; doc updates
4.  Check to see if NC_PERSIST and NC_MEMORY are defined
5.  Use nc_put_vara functions instead of nc_put_vars functions when
    stride is 1 to work-around bugs in some netcdf versions (e.g.,
    4.6.1).
6.  Added put_slices method and writing compound types
7.  Added support for nested compound objects
8.  Added support for chunking, fill, deflate, and cache values
9.  The .put_slices method will convert a scalar value to an array
    if necessary, further simplifying its usage.