@@ -1,5 +1,4 @@
-#define MODULE_VERSION_STRING   "0.2.1"
+#define MODULE_VERSION_STRING   "0.2.2"
 #define MODULE_VERSION_NUMBER   201
-#define MODULE_VERSION_NUMSTR   "0.2.1"
 
 static char *Module_Version_String = MODULE_VERSION_STRING;
